sua code theo sonarb